melhorias na documentação dos arquivos de Zona de Pesquisa Direta e Reversa do Bind9 DNS Server, customização do
arquivo: 50-default.conf do Rsyslog, habilitadndo recursos de Log do Cron, User, etc, arquivo adicionado no script
do OpenSSH Server: 01-openssh.sh, correção do arquivo: awstatsupdate-cron em relação a falha de atualização das
informações de estatísticas de acesso ao domínio pti.intra.

18/01/2022 - Robson Vaamonde - Novas opções de configuração do OpenSSH Server no arquivo: sshd_config ainda em fase 
de testes e homologação (acréscentado no final do arquivo, opções comentadas), customização do arquivo: config.conf
do Neofetch, criação do arquivo de CRON: neofetch-cron para atualizar o arquivo motd, atualização das opções no 
arquivo: 01-openssh.sh, atualização do arquivo de configuração: dhcpd.conf com novas opções: get-lease-hostnames on;
e ping-check on;, customização do arquivo: isc-dhcp-server habilitando somente o IPv4 e Interface de Rede enp0s3,
acréscimo do bloco para habilitar os principais módulos do Apache2 no script: 07-lamp.sh, acréscimo do aplicativo
AWStats no script: 00-parametros.sh referente a instalação do LAMP-Server e acrescentado as opções de configuração
no script: 07-lamp.sh.

17/01/2022 - Robson Vaamonde - Atualização dos arquivos: issue.net, 04-ConfiguracaoDoNeplan.sh, correção do Locale no
arquivo: 05-ntp.sh, acréscimo das linhas: locale-gen pt_BR.UTF-8, localectl set-locale LANG=pt_BR.UTF-8 e correção do
comando: update-locale LANG=pt_BR.UTF-8 LC_ALL=pt_BR.UTF-8 LANGUAGE="pt_BR:pt:en", será mostrado em vídeo o acréscimo
da informação no arquivo: /etc/default/keyboard da variável: XKBVARIANT="intl" quando se utiliza teclado en_US-UTF-8,
acréscimo do programa Neofetch no script do OpenSSH personalizando o arquivo: /etc/motd com o logo do Ubuntu Server,
acréscimo do aplicativo Shell-In-a-Box no script: 01-openssh.sh e atualização do arquivo: 00-paramentros.sh com as