@@ -1,13 +1,23 @@
-# The settings in this file are used by the program ntpdate-debian, but not
-# by the upstream program ntpdate.
-
-# Set to "yes" to take the server list from /etc/ntp.conf, from package ntp,
-# so you only have to keep it in one place.
+# Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
+# Facebook: facebook.com/ProcedimentosEmTI
+# Facebook: facebook.com/BoraParaPratica
+# YouTube: youtube.com/BoraParaPratica
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 20/01/2022
+# Data de atualização: 20/01/2022
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
+# Testado e homologado para a versão do Ntpdate v4.2.x
+#
+# Configuração do ntpdate utilizar o arquivo de configuração do NTP Server
+# localizado em: /etc/ntp.conf
 NTPDATE_USE_NTP_CONF=yes
-
-# List of NTP servers to use  (Separate multiple servers with spaces.)
-# Not used if NTPDATE_USE_NTP_CONF is yes.
-NTPSERVERS="ntp.ubuntu.com"
-
-# Additional options to pass to ntpdate
+#
+# Configuração da lista de servidores padrão utilizado pelo ntpdate caso o
+# arquivo localizado em: /etc/ntp.conf não exista.
+NTPSERVERS="a.st1.ntp.br a.ntp.br"
+#
+# Configurações adicionais passadas para o comando ntpdate por padrão
 NTPOPTIONS=""
