@@ -14,5 +14,5 @@
 # Configuração global dos Servidores NTP que serão utilizados para sincronizar
 # a data e hora do servidor local Ubuntu Server
 [Time]
-NTP=ptispo01ws01.pti.intra
-FallbackNTP=a.st1.ntp.br
+NTP=a.st1.ntp.br
+FallbackNTP=a.ntp.br
